# leary_gh

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  cmake_install.cmake  leary  leary.sublime-workspace  project.4coder  setup_cl_x64.bat  todo.txt
assets/entities/: dummy.ent  dummy2.ent  nrm_test.ent
assets/models/: cube.fbx  plane.fbx
assets/shaders/: basic2d.glsl  font.glsl  gui_basic.glsl  line.glsl  mesh.glsl  terrain.glsl  wireframe.glsl
assets/textures/: terrain.bmp~  terrain.r16
benchmarks/: benchmark_array.cpp  benchmark_hashtable.cpp  benchmark_maths.cpp  benchmark_random.cpp  main.cpp
cmake/: FindGLEW.cmake  FindSDL2.cmake  FindVulkan.cmake  FindXCB.cmake
data/: settings.ini
data/shaders/: frag.spv  fragment.glsl  triangle.frag  triangle.vert  vert.spv  vertex.glsl
data/textures/: crate.tga
engine/: main.cpp  prefix.h
engine/core/: ecs.cpp  ecs.h  math.h  settings.cpp  settings.h
engine/platform/: file.h  linux_file.cpp  linux_main.cpp  linux_vulkan.cpp  platform_vulkan.h  win32_file.cpp
engine/render/: game_window.cpp  game_window.h  rendering.cpp  rendering.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
engine/render/opengl/: opengl_device.cpp  opengl_device.h  opengl_shader.cpp  opengl_shader.h
engine/render/vulkan/: vulkan_device.cpp  vulkan_device.h
engine/util/: debug.cpp  debug.h  environment.cpp  environment.h  macros.h
ext/SOIL/: CMakeLists.txt
src/: CMakeLists.txt  Makefile  build_config.h  cmake_install.cmake  debug.cpp  debug.h  ecs.h  gamestate.h  input.cpp  input.h  leary.cpp  leary.h  leary_macros.h  main.cpp  physics.cpp  physics.h  rendering.cpp  rendering.gh  rendering.h  settings.cpp  settings.h  todo.txt  util.cpp  util.h  vulkan_render.cpp  vulkan_render.h
src/core/: allocator.cpp  allocator.h  array.cpp  array.h  assets.cpp  assets.h  collision.cpp  collision.h  core.h  ecs.cpp  file.cpp  file.h  font.cpp  font.h  gfx_vulkan.cpp  gfx_vulkan.h  gui.cpp  gui.h  hash.cpp  hash_table.cpp  hash_table.h  lexer.cpp  log.cpp  log.h  math.cpp  math.h  maths.cpp  maths.h  mesh.cpp  profiler.cpp  profiler.h  profiling.cpp  profiling.h  random.cpp  random.h  serialize.cpp  serialize.h  settings.cpp  settings.h  sound.cpp  (+5 more)
src/platform/: debug.h  file.h  linux_debug.cpp  linux_file.cpp  linux_input.cpp  linux_leary.cpp  linux_main.cpp  linux_vulkan.cpp  platform.h  platform_debug.h  platform_file.h  platform_input.h  platform_main.h  platform_vulkan.h  thread.h  win32_debug.cpp  win32_file.cpp  win32_input.cpp  win32_leary.cpp  win32_main.cpp  win32_thread.cpp  win32_vulkan.cpp
src/render/: game_window.cpp  game_window.h  vulkan_device.cpp  vulkan_device.h
src/render/opengl/: opengl_device.cpp  opengl_device.h
src/render/shaders/: basic2d.frag  basic2d.glsl  basic2d.vert  font.frag  font.glsl  font.vert  generic.vert  mesh.frag  mesh.glsl  mesh.vert  terrain.frag  terrain.glsl  terrain.vert  triangle.vert
src/render/vulkan/: vulkan_device.cpp  vulkan_device.h
src/shaders/: basic2d.glsl  generic.glsl  gui_basic.glsl  terrain.glsl
src/util/: debug.h
tests/: main.cpp  test_allocator.cpp  test_array.cpp
tools/: benchmark.cpp  exporter.cpp  preprocessor.cpp
tools/blender/: leary_exporter.py
